python-debian (0.1.21) UNRELEASED; urgency=low

  [ Tshepang Lekhonkhobe ]
  * test_changelog.py: Close open files. (Closes: #625672)

  [ John Wright ]
  * Allow ':' as the first character of a value. (Closes: #597249)

 -- John Wright <jsw@debian.org>  Sat, 02 Jul 2011 23:20:27 -0700

python-debian (0.1.20) unstable; urgency=low

  * Fix FTBFS, caused by referring to apt_pkg in a test with no
    python-apt Build-Depends. (Closes: #623011)
  * changelog: Implement __unicode__ in ChangeBlock and Changelog.
    (Closes: #561805)

 -- John Wright <jsw@debian.org>  Sun, 17 Apr 2011 17:37:44 -0700

python-debian (0.1.19) unstable; urgency=low

  * debian_support.BaseVersion: Disallow ':' in upstream version if
    there is no epoch.  Original patch by Steve Kowalik.
    (Closes: #619997)

 -- John Wright <jsw@debian.org>  Fri, 15 Apr 2011 02:05:45 -0700

python-debian (0.1.18+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Migrate to new python-apt API (Closes: #604544)

 -- Julian Andres Klode <jak@debian.org>  Tue, 05 Apr 2011 11:02:08 +0200

python-debian (0.1.18) unstable; urgency=low

  * Support installation together with older versions of python-apt.
    Original patch by Jelmer Vernooij. (Closes: #590805)

 -- John Wright <jsw@debian.org>  Wed, 04 Aug 2010 01:16:52 -0700

python-debian (0.1.17) unstable; urgency=low

  [ James Westby ]
  * Use os.path.normpath to hide python version differences

  [ John Wright ]
  * test_deb822.py: Make test_gpg_info more robust (Closes: #582878)
  * deb822: Use chardet to try to detect character encodings as necessary
    - This is only used when the specified encoding doesn't work.  It's mainly
      useful for files containing multiple deb822 paragraphs with mixed
      encodings, like etch's Sources file. (Closes: #586021)

 -- John Wright <jsw@debian.org>  Sun, 25 Jul 2010 02:07:11 -0700

python-debian (0.1.16) unstable; urgency=low

  * debian_support: Be more careful in case apt_pkg is not available